# kal-cli

./: .env.example  Cargo.toml  README.md
docs/: INIT_PLAN.md
skills/kal-config/: SKILL.md
skills/kal-events/: SKILL.md
skills/kal-exchange/: SKILL.md
skills/kal-markets/: SKILL.md
skills/kal-order/: SKILL.md
skills/kal-portfolio/: SKILL.md
skills/kal-shell/: SKILL.md
skills/kal-trades/: SKILL.md
skills/kal-watch/: SKILL.md
src/: auth.rs  client.rs  config.rs  main.rs  query.rs
src/commands/: config_cmd.rs  events.rs  exchange.rs  markets.rs  mod.rs  order.rs  portfolio.rs  shell.rs  trades.rs  watch.rs
src/output/: events.rs  format.rs  markets.rs  mod.rs  orders.rs  portfolio.rs  table.rs
